change some classes